apply plugin: 'java'
apply plugin: "jacoco"

version = '1.0.0'

description = """IvanElectricCarCharger"""

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.opencsv:opencsv:5.9'
    implementation 'io.fusionauth:java-http:0.2.9'

    testImplementation(platform('org.junit:junit-bom:5.10.1'))
    testImplementation('org.junit.jupiter:junit-jupiter')
    testImplementation 'org.hamcrest:hamcrest-all:1.3'
    testImplementation 'com.oneeyedmen:okeydoke:2.0.3'
    testImplementation 'org.mockito:mockito-core:5.8.0'
}
test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
jacoco {
    toolVersion = "0.8.11"
    reportsDirectory = file("$buildDir/customJacocoReportDir")
}
jacocoTestReport {
    reports {
        html.outputLocation = file("${buildDir}/jacocoHtml")
    }
}
